# reservation-service

./: .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml
abi/: Cargo.toml  build.rs
abi/proto/: reservation.proto
abi/src/: config.rs  lib.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_filter.rs  reservation_query.rs  reservation_status.rs
migrations/: 20221220090838_init.down.sql  20221220090838_init.up.sql  20221220091911_reservation.down.sql  20221220091911_reservation.up.sql  20221220091930_reservation_trigger.down.sql  20221220091930_reservation_trigger.up.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  store.rs
rfcs/: 0001-core-reservation.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs  test_utils.rs
