[package]
name = "abi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.3"
prost-types = "0.11.2"
tonic = { version = "0.8.3", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.8.4"
