[package]
name = "reservation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.60"
chrono = { version = "0.4.23", features = ["serde"] }
futures = { version = "0.3.25", default-features = false }
prost-types = "0.11.5"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["sync"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"

[dev-dependencies]
sqlx-db-tester = "0.3.1"
tokio = { version = "1.23.0", features = ["full"] }
